# devproxy

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: initial_spec.md  troubleshooting.md
scripts/: lint.sh
src/devproxy/: __init__.py
src/devproxy/addons/: __init__.py  router.py
src/devproxy/cli/: __init__.py  main.py
src/devproxy/config/: __init__.py  settings.py
src/devproxy/models/: __init__.py  config.py
src/devproxy/services/: __init__.py  cert_service.py  hosts_service.py  proxy_service.py
tests/: __init__.py  conftest.py  test_models.py  test_router.py  test_services.py  test_settings.py
